--- a/report.html
+++ b/report.html
@@ -22,43 +22,43 @@
         <p>
           Creating a Melody story on the Melody website using knowledge graphs
           can be an engaging way to present information and explore a specific
-          topic. In your case, the chosen theme was "The Beatles," and you aimed
-          to showcase their history, members, and influences within a specific
-          time period.
+          topic. In our case, the chosen themes were "The Beatles" and “Joy
+          Division”, we aimed to showcase their history, members, and influences
+          within a specific time period.
         </p>
         <p>
-          To begin, you created a Melody account on the website and started the
-          process of crafting your data story. By selecting the theme as "The
-          Beatles," you set the focus of your project on this iconic band. Your
-          hypothesis was that The Beatles had a significant impact on the
-          mentality and culture of people worldwide.
+          To begin, we created a Melody account on the website and started the
+          process of crafting our data story. By selecting the theme as "The
+          Beatles" and “Joy Division” we set the focus of our project on these 2
+          iconic bands. Our hypothesis was that both bands had a significant
+          impact on the mentality and culture of people worldwide.
         </p>
         <p>
-          To support your hypothesis, you utilized SPARQL queries to search the
+          To support our hypothesis, we utilized SPARQL queries to search the
           WIKIDATA database. WIKIDATA is a collaborative knowledge graph that
           contains structured data from various sources, including Wikipedia. By
           referencing pre-established codes within WIKIDATA (such as country
-          codes), you constructed queries following the examples provided by
-          your professor.
+          codes), we constructed queries following the examples provided by your
+          professor.
         </p>
         <p>
-          After checking the validity of your queries on WIKIDATA, you
-          implemented them on the Melody website. The website offers various
-          templates and visualization options like count, line charts, doughnut
-          charts, tables, etc. Once your queries retrieved the desired
-          information accurately, you arranged and presented the data in a
-          coherent storyline.
+          After checking the validity of our queries on WIKIDATA, we implemented
+          them on the Melody website. The website offers various templates and
+          visualization options like count, line charts, doughnut charts,
+          tables, etc. Once our queries retrieved the desired information
+          accurately, we arranged and presented the data in a coherent
+          storyline.
         </p>
         <p>
-          Throughout the process, you used different types of queries based on
-          the specific information you required. For instance, you explored the
-          band's history, their personal lives, and their fame. Each time, you
+          Throughout the process, we used different types of queries based on
+          the specific information we required. For instance, we explored the
+          bands’ histories, their personal lives, and their fame. Each time, we
           followed the process of checking the relevant code on WIKIDATA,
           constructing a search query to extract the desired data, verifying the
           obtained information, and finally incorporating it into the Melody
-          website. By following this methodology, you were able to create a
-          Melody story centered around "The Beatles" by utilizing knowledge
-          graphs and the resources provided by WIKIDATA.
+          website. By following this methodology, we were able to create a
+          Melody story centered around "The Beatles" and “Joy Division” by
+          utilizing knowledge graphs and the resources provided by WIKIDATA.
         </p>
       </section>
       <section>
@@ -67,13 +67,13 @@
           Once we completed the story on the Melody website, our next step was
           to gather academic papers that would reinforce our hypothesis and
           provide a deeper understanding of the theme. These scholarly sources
-          would serve as a foundation for writing a comprehensive article about
-          "The Beatles" and their cultural impact.
+          would serve as a foundation for writing a comprehensive articles about
+          "The Beatles” and “Joy Division” and their cultural impact.
         </p>
         <p>
           Our search for bibliographic content led us to discover a wealth of
           valuable resources that allowed us to delve into the fascinating story
-          of this iconic band. After thoroughly studying the material and
+          of this iconic bands. After thoroughly studying the material and
           gaining profound insights, we embarked on the process of crafting our
           article.
         </p>
@@ -82,8 +82,8 @@
           delved into the realm of bands within this genre and explored the
           profound influence they exerted on society. The resulting article can
           be accessed on the designated "article" page of this website,
-          presenting a thorough analysis of the impact of "The Beatles" and
-          their genre on a national scale.
+          presenting a thorough analysis of the impact of "The Beatles" and “Joy
+          Division” and their genres on a national scale.
         </p>
       </section>
       <section>
@@ -217,7 +217,7 @@
           music, data, and technology. We acquired new information, honed our
           skills, and expanded our understanding in these domains. While the
           project diverged from our previous experiences, it proved to be an
-          enriching endeavor, enabling us to grow both professionally and
+          enriching endeavor, enabling us to grow professionally and
           intellectually.
         </p>
       </section>
